--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Real creativity doesn’t come from thinking harder, it comes from being still.</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">19 minutes ago</div>
+                        <div class="date">34 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>How Will Arthur Go On After This..🙂‍↕️</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">20 minutes ago</div>
+                        <div class="date">35 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Fears to Fathom: Woodbury Getaway</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -420,7 +420,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Nearly got pantsd(sum) for she’s so handsome. Not my best #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -563,7 +563,7 @@
                     <div class="video-info">
                         <h3>Arthur Goes To His First Rave🕺🏻😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -873,7 +873,7 @@
                     <div class="video-info">
                         <h3>Can You Guess The Movie?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1810,7 +1810,7 @@
                     <div class="video-info">
                         <h3>Fly high puffle 🕊️</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -1821,7 +1821,7 @@
                     <div class="video-info">
                         <h3>Some unique intimidation tactics here ￼</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -1832,7 +1832,7 @@
                     <div class="video-info">
                         <h3>Hope they didn’t see that</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -1843,7 +1843,7 @@
                     <div class="video-info">
                         <h3>I bought all of it</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Real creativity doesn’t come from thinking harder, it comes from being still.</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">19 minutes ago</div>
+                            <div class="date">34 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>How Will Arthur Go On After This..🙂‍↕️</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">20 minutes ago</div>
+                            <div class="date">35 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10287,7 +10287,7 @@
                         <div class="video-info">
                             <h3>Fears to Fathom: Woodbury Getaway</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10386,7 +10386,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Nearly got pantsd(sum) for she’s so handsome. Not my best #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10408,7 +10408,7 @@
                         <div class="video-info">
                             <h3>Arthur Goes To His First Rave🕺🏻😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10474,7 +10474,7 @@
                         <div class="video-info">
                             <h3>Can You Guess The Movie?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10771,7 +10771,7 @@
                         <div class="video-info">
                             <h3>Fly high puffle 🕊️</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10782,7 +10782,7 @@
                         <div class="video-info">
                             <h3>Some unique intimidation tactics here ￼</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10793,7 +10793,7 @@
                         <div class="video-info">
                             <h3>Hope they didn’t see that</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10804,7 +10804,7 @@
                         <div class="video-info">
                             <h3>I bought all of it</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
