--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Real creativity doesn’t come from thinking harder, it comes from being still.</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">34 minutes ago</div>
+                        <div class="date">52 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>How Will Arthur Go On After This..🙂‍↕️</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">35 minutes ago</div>
+                        <div class="date">53 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Back Here Again was a real fun one to make ! Keep streaming the EP #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>How to Freeze Pizza Dough</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - My EP is out and I’m very proud of it. I hope you love it as much as I do #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - The Root of the Mind is in the Heart</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Devi Yantra Can Do Incredible Things | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Japanese Restaurant That Lets YOU Decide the Price</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Arthur Meets The Angry Minion's Sister!😡</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -409,7 +409,7 @@
                     <div class="video-info">
                         <h3>Passing the5ers Prop Firm Evaluation Live (Profit Update and new Expert Advisor)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5776,7 +5776,7 @@
                         <div class="video-info">
                             <h3>Passing the5ers Prop Firm Evaluation Live (Profit Update and new Expert Advisor)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Real creativity doesn’t come from thinking harder, it comes from being still.</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">34 minutes ago</div>
+                            <div class="date">52 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - The Root of the Mind is in the Heart</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Devi Yantra Can Do Incredible Things | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>How to Freeze Pizza Dough</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>How Will Arthur Go On After This..🙂‍↕️</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">35 minutes ago</div>
+                            <div class="date">53 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Back Here Again was a real fun one to make ! Keep streaming the EP #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - My EP is out and I’m very proud of it. I hope you love it as much as I do #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Japanese Restaurant That Lets YOU Decide the Price</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10298,7 +10298,7 @@
                         <div class="video-info">
                             <h3>Arthur Meets The Angry Minion's Sister!😡</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
