--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Fears to Fathom: Woodbury Getaway</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -398,7 +398,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Tour has begun WHO IS EXCITED?? #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -10287,7 +10287,7 @@
                         <div class="video-info">
                             <h3>Fears to Fathom: Woodbury Getaway</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10375,7 +10375,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Tour has begun WHO IS EXCITED?? #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
